[gd_scene load_steps=15 format=3 uid="uid://cxqb66omy3qm3"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_jabki"]
[ext_resource type="Script" path="res://Utility/StateMachine.gd" id="2_efdqs"]
[ext_resource type="Texture2D" uid="uid://dudfcv8iwwnmh" path="res://Art/Robot/Head.png" id="2_gbguq"]
[ext_resource type="Script" path="res://Player/States/idle.gd" id="4_a617p"]
[ext_resource type="Script" path="res://Player/States/run.gd" id="5_nwoa1"]
[ext_resource type="Script" path="res://Player/States/air.gd" id="6_pgpvm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lgeuo"]
size = Vector2(24, 26)

[sub_resource type="Animation" id="Animation_x5fp4"]
resource_name = "HeadBodyRun"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_r2q0s"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_qn2uf"]
resource_name = "HeadRunLeft"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -3.14159, -6.28319]
}

[sub_resource type="Animation" id="Animation_wor8y"]
resource_name = "HeadRun"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 3.14159, 6.28319]
}

[sub_resource type="Animation" id="Animation_yxrev"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kr4d5"]
_data = {
"HeadBodyRun": SubResource("Animation_x5fp4"),
"HeadIdle": SubResource("Animation_r2q0s"),
"HeadRunLeft": SubResource("Animation_qn2uf"),
"HeadRunRight": SubResource("Animation_wor8y"),
"RESET": SubResource("Animation_yxrev")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bq2wa"]
size = Vector2(26, 28)

[node name="Player" type="CharacterBody2D" groups=["convey"]]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_jabki")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_gbguq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lgeuo")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_efdqs")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("animationPlayer")]
script = ExtResource("4_a617p")
animationPlayer = NodePath("../../AnimationPlayer")

[node name="Run" type="Node" parent="StateMachine" node_paths=PackedStringArray("animationPlayer")]
script = ExtResource("5_nwoa1")
animationPlayer = NodePath("../../AnimationPlayer")

[node name="Air" type="Node" parent="StateMachine" node_paths=PackedStringArray("animationPlayer")]
script = ExtResource("6_pgpvm")
animationPlayer = NodePath("../../AnimationPlayer")

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kr4d5")
}
playback_default_blend_time = 0.2

[node name="PlayerArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
shape = SubResource("RectangleShape2D_bq2wa")

[node name="ConveyorCheck" type="RayCast2D" parent="."]
target_position = Vector2(0, 237)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="MoveRightCheck" type="RayCast2D" parent="."]
target_position = Vector2(16, 0)
collision_mask = 2

[connection signal="area_entered" from="PlayerArea" to="." method="_on_player_area_area_entered"]
[connection signal="body_entered" from="PlayerArea" to="." method="_on_player_area_body_entered"]
